--- a/index.html
+++ b/index.html
@@ -42,25 +42,17 @@
       ::-webkit-scrollbar-thumb:hover {
         background: #00f3ff;
       }
+
+      /* Base styles for animations */
+      @keyframes fadeIn {
+        from { opacity: 0; }
+        to { opacity: 1; }
+      }
+      .animate-fade-in {
+        animation: fadeIn 0.3s ease-out forwards;
+      }
     </style>
-  <script type="importmap">
-{
-  "imports": {
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "react": "https://esm.sh/react@^19.2.3",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "recharts": "https://esm.sh/recharts@^3.6.0",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
-    "vite": "https://esm.sh/vite@^7.3.0",
-    "fast-xml-parser": "https://esm.sh/fast-xml-parser@^5.3.3",
-    "@tanstack/react-virtual": "https://esm.sh/@tanstack/react-virtual@^3.13.16"
-  }
-}
-</script>
-<link rel="stylesheet" href="/index.css">
-</head>
+  </head>
   <body class="bg-dj-dark text-white antialiased min-h-screen">
     <div id="root" class="min-h-screen"></div>
     <script type="module" src="/index.tsx"></script>
