Updating UI and branding

--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
               dj: {
                 dark: '#121212',
                 panel: '#1e1e1e',
-                neon: '#00f3ff',
-                accent: '#ff0055',
+                neon: '#00f3ff', // Primary: Processing, Analysis
+                accent: '#ff0055', // Secondary: Errors, Warnings
                 dim: '#888888',
                 border: '#333333'
               }
             },
             fontFamily: {
-              mono: ['ui-monospace', 'SFMono-Regular', 'Menlo', 'Monaco', 'Consolas', "Liberation Mono", "Courier New", 'monospace'],
+              sans: ['Inter', 'Roboto', 'sans-serif'],
+              mono: ['JetBrains Mono', 'Consolas', 'monospace'],
             }
           }
         }
